--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://yswang837.github.io/'
 languageCode = 'en-us'
 title = '小钻风'
 BookSection = 'docs'
